Bug 389152 - System Settings crashes after trying to install desktop theme
Summary: System Settings crashes after trying to install desktop theme
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2018-01-18 11:52 UTC by Mikhail
Modified: 2018-01-22 10:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
xsession errors (415.14 KB, text/plain)
2018-01-18 12:12 UTC, Mikhail
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mikhail 2018-01-18 11:52:15 UTC
Application: systemsettings5 (5.12.80)

Qt Version: 5.9.3
Frameworks Version: 5.43.0
Operating System: Linux 4.13.0-26-generic x86_64
Distribution: KDE neon Developer Edition

-- Information about the crash:
- What I was doing when the application crashed: I tried to install a theme "SDDM Theme Breeze Slider" from the file breeze-slider.tar.gz. Now, when I'm trying to enter to Desktop Themes, System Settings crashes.

The crash can be reproduced every time.

-- Backtrace:
Application: System Settings (systemsettings5), signal: Aborted
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f764f3628c0 (LWP 1375))]

Thread 10 (Thread 0x7f760db55700 (LWP 1871)):
#0  0x00007f764b05874d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f7644ff338c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f7644ff349c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f764b97f6cb in QEventDispatcherGlib::processEvents (this=0x7f76080008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007f764b927e2a in QEventLoop::exec (this=this@entry=0x7f760db54ce0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#5  0x00007f764b7508f4 in QThread::exec (this=this@entry=0x2f83880) at thread/qthread.cpp:515
#6  0x00007f7649805d25 in QQmlThreadPrivate::run (this=0x2f83880) at qml/ftw/qqmlthread.cpp:147
#7  0x00007f764b755709 in QThreadPrivate::start (arg=0x2f83880) at thread/qthread_unix.cpp:368
#8  0x00007f7646e7c6ba in start_thread (arg=0x7f760db55700) at pthread_create.c:333
#9  0x00007f764b06441d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 9 (Thread 0x7f7617035700 (LWP 1471)):
#0  __GI___tls_get_addr (ti=0x7f764bde26a0) at dl-tls.c:834
#1  0x00007f764b7545b6 in get_thread_data () at thread/qthread_unix.cpp:189
#2  QThreadData::current (createIfNecessary=createIfNecessary@entry=true) at thread/qthread_unix.cpp:244
#3  0x00007f764b97fad1 in postEventSourcePrepare (timeout=0x0, s=0x7f76100012d0) at kernel/qeventdispatcher_glib.cpp:252
#4  postEventSourceCheck (source=0x7f76100012d0) at kernel/qeventdispatcher_glib.cpp:269
#5  0x00007f7644ff2dc1 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007f7644ff3330 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007f7644ff349c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#8  0x00007f764b97f6cb in QEventDispatcherGlib::processEvents (this=0x7f76100008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#9  0x00007f764b927e2a in QEventLoop::exec (this=this@entry=0x7f7617034ce0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#10 0x00007f764b7508f4 in QThread::exec (this=this@entry=0x1e57c90) at thread/qthread.cpp:515
#11 0x00007f7649805d25 in QQmlThreadPrivate::run (this=0x1e57c90) at qml/ftw/qqmlthread.cpp:147
#12 0x00007f764b755709 in QThreadPrivate::start (arg=0x1e57c90) at thread/qthread_unix.cpp:368
#13 0x00007f7646e7c6ba in start_thread (arg=0x7f7617035700) at pthread_create.c:333
#14 0x00007f764b06441d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 8 (Thread 0x7f762086e700 (LWP 1443)):
#0  0x00007f764b05427d in read () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f76450366f0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f7644ff2e74 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f7644ff3330 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f7644ff349c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f764b97f6cb in QEventDispatcherGlib::processEvents (this=0x7f761c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#6  0x00007f764b927e2a in QEventLoop::exec (this=this@entry=0x7f762086dce0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#7  0x00007f764b7508f4 in QThread::exec (this=this@entry=0x1b20100) at thread/qthread.cpp:515
#8  0x00007f7649805d25 in QQmlThreadPrivate::run (this=0x1b20100) at qml/ftw/qqmlthread.cpp:147
#9  0x00007f764b755709 in QThreadPrivate::start (arg=0x1b20100) at thread/qthread_unix.cpp:368
#10 0x00007f7646e7c6ba in start_thread (arg=0x7f762086e700) at pthread_create.c:333
#11 0x00007f764b06441d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 7 (Thread 0x7f7623886700 (LWP 1430)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f7629e71b83 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#2  0x00007f7629e719e7 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#3  0x00007f7646e7c6ba in start_thread (arg=0x7f7623886700) at pthread_create.c:333
#4  0x00007f764b06441d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 6 (Thread 0x7f7624087700 (LWP 1429)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f7629e71b83 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#2  0x00007f7629e719e7 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#3  0x00007f7646e7c6ba in start_thread (arg=0x7f7624087700) at pthread_create.c:333
#4  0x00007f764b06441d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 5 (Thread 0x7f7624888700 (LWP 1428)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f7629e71b83 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#2  0x00007f7629e719e7 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#3  0x00007f7646e7c6ba in start_thread (arg=0x7f7624888700) at pthread_create.c:333
#4  0x00007f764b06441d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 4 (Thread 0x7f7625089700 (LWP 1427)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f7629e71b83 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#2  0x00007f7629e719e7 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#3  0x00007f7646e7c6ba in start_thread (arg=0x7f7625089700) at pthread_create.c:333
#4  0x00007f764b06441d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 3 (Thread 0x7f7633285700 (LWP 1389)):
#0  0x00007f7645037a79 in g_mutex_lock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f7644ff3290 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f7644ff349c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f764b97f6cb in QEventDispatcherGlib::processEvents (this=0x7f762c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007f764b927e2a in QEventLoop::exec (this=this@entry=0x7f7633284cd0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#5  0x00007f764b7508f4 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:515
#6  0x00007f764bdfe315 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#7  0x00007f764b755709 in QThreadPrivate::start (arg=0x7f764c072d40) at thread/qthread_unix.cpp:368
#8  0x00007f7646e7c6ba in start_thread (arg=0x7f7633285700) at pthread_create.c:333
#9  0x00007f764b06441d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7f763be5e700 (LWP 1384)):
#0  0x00007f764b05874d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f76476f2c62 in ?? () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007f76476f48d7 in xcb_wait_for_event () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007f763e3b51f9 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#4  0x00007f764b755709 in QThreadPrivate::start (arg=0x18b2330) at thread/qthread_unix.cpp:368
#5  0x00007f7646e7c6ba in start_thread (arg=0x7f763be5e700) at pthread_create.c:333
#6  0x00007f764b06441d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7f764f3628c0 (LWP 1375)):
[KCrash Handler]
#6  0x00007f764af92428 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:54
#7  0x00007f764af9402a in __GI_abort () at abort.c:89
#8  0x00007f764b73dc71 in qt_message_fatal (context=..., message=<synthetic pointer>) at global/qlogging.cpp:1690
#9  QMessageLogger::fatal (this=this@entry=0x7ffdb7b7d7c0, msg=msg@entry=0x7f764ca56318 "Accessed invalid KPluginInfo object") at global/qlogging.cpp:796
#10 0x00007f764c9e31b2 in KPluginInfo::serviceTypes (this=<optimized out>) at /workspace/build/src/services/kplugininfo.cpp:578
#11 0x00007f764ca10d57 in KPluginInfo::version (this=this@entry=0x7ffdb7b7d8c0) at /workspace/build/src/services/kplugininfo.cpp:548
#12 0x00007f7618b65afd in Plasma::ThemePrivate::useCache (this=0x271fcc0) at /workspace/build/src/plasma/private/theme_p.cpp:195
#13 0x00007f7618b5cce9 in Plasma::Theme::findInRectsCache (this=0x3158ee0, image=..., element=..., rect=...) at /workspace/build/src/plasma/theme.cpp:344
#14 0x00007f7618b55841 in Plasma::SvgPrivate::elementRect (this=this@entry=0x369a790, elementId=...) at /workspace/build/src/plasma/svg.cpp:538
#15 0x00007f7618b55b44 in Plasma::SvgPrivate::checkColorHints (this=this@entry=0x369a790) at /workspace/build/src/plasma/svg.cpp:585
#16 0x00007f7618b56b40 in Plasma::SvgPrivate::themeChanged (this=0x369a790) at /workspace/build/src/plasma/svg.cpp:670
#17 0x00007f7618b56c7a in Plasma::Svg::setTheme (this=this@entry=0x2f5d890, theme=theme@entry=0x3158ee0) at /workspace/build/src/plasma/svg.cpp:976
#18 0x00007f76079eab5f in KCMDesktopTheme::applyPlasmaTheme (this=0x2c0d9e0, item=0x3154d50, themeName=...) at /workspace/build/kcms/desktoptheme/kcm.cpp:164
#19 0x00007f76079ee0f0 in KCMDesktopTheme::qt_static_metacall (_o=_o@entry=0x2c0d9e0, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=_id@entry=8, _a=_a@entry=0x7ffdb7b7de50) at /workspace/build/obj-x86_64-linux-gnu/kcms/desktoptheme/moc_kcm.cpp:158
#20 0x00007f76079ee1f0 in KCMDesktopTheme::qt_metacall (this=0x2c0d9e0, _c=QMetaObject::InvokeMetaMethod, _id=8, _a=0x7ffdb7b7de50) at /workspace/build/obj-x86_64-linux-gnu/kcms/desktoptheme/moc_kcm.cpp:231
#21 0x00007f76497b9539 in QQmlObjectOrGadget::metacall (this=this@entry=0x7ffdb7b7e1c0, type=type@entry=QMetaObject::InvokeMetaMethod, index=index@entry=23, argv=<optimized out>) at qml/qqmlpropertycache.cpp:1713
#22 0x00007f7649738ea1 in CallMethod (object=..., index=<optimized out>, returnType=<optimized out>, argCount=<optimized out>, argTypes=<optimized out>, engine=engine@entry=0x1f11330, callArgs=0x7f760c7563a8, callType=QMetaObject::InvokeMetaMethod) at jsruntime/qv4qobjectwrapper.cpp:1086
#23 0x00007f7649739e15 in CallPrecise (object=..., data=..., engine=engine@entry=0x1f11330, callArgs=callArgs@entry=0x7f760c7563a8, callType=callType@entry=QMetaObject::InvokeMetaMethod) at jsruntime/qv4qobjectwrapper.cpp:1348
#24 0x00007f764973afb0 in QV4::QObjectMethod::callInternal (this=<optimized out>, callData=<optimized out>, scope=...) at jsruntime/qv4qobjectwrapper.cpp:1842
#25 0x00007f764975358e in QV4::Object::call (d=0x7f760c7563a8, scope=..., this=<optimized out>) at jsruntime/qv4object_p.h:372
#26 QV4::Runtime::method_callProperty (engine=0x1f11330, nameIndex=<optimized out>, callData=0x7f760c7563a8) at jsruntime/qv4runtime.cpp:1104
#27 0x00007f760758fcd9 in ?? ()
#28 0x0000000000000000 in ?? ()

Possible duplicates by query: bug 382406, bug 379557, bug 377996.

Reported using DrKonqi
Comment 1 Mikhail 2018-01-18 12:12:02 UTC
Created attachment 109964 [details]
xsession errors
Comment 2 Patrick Silva 2018-01-20 13:22:57 UTC
Same problem on Arch Linux, plasma 5.12 beta.
Comment 3 Kai Uwe Broulik 2018-01-22 10:10:43 UTC
Git commit 9870027494b52e0daa54383a243a30a27ea42f5f by Kai Uwe Broulik.
Committed on 22/01/2018 at 10:10.
Pushed by broulik into branch 'master'.

[Plasma Theme] Guard against invalid KPluginInfo object

Differential Revision: https://phabricator.kde.org/D9961

M  +3    -1    src/plasma/private/theme_p.cpp

https://commits.kde.org/plasma-framework/9870027494b52e0daa54383a243a30a27ea42f5f