[Plasma Theme] Guard against invalid KPluginInfo object

BUG: 389152

Differential Revision: https://phabricator.kde.org/D9961